--- a/12-rock-paper-scissors-auto.html
+++ b/12-rock-paper-scissors-auto.html
@@ -24,9 +24,9 @@
           <img src="images/scissors-emoji.png" class="move-icon">
         </button>
       </div>
-      <p class="js-Result-Text result"></p>
-      <p class="js-Moves-Text result">You <img src="images/rock-emoji.png" class="move-icon"> <img src="images/rock-emoji.png" class="move-icon"> AI</p>
-      <p class="js-Summary-Text result"></p>
+      <p class="js-Result-Text"></p>
+      <p class="js-Moves-Text">You <img src="images/rock-emoji.png" class="move-icon"> <img src="images/rock-emoji.png" class="move-icon"> AI</p>
+      <p class="js-Summary-Text"></p>
       <button class="reset-button">Reset Score</button>
       <button class="autoplay-button">Autoplay</button>
     </div>
